# rl_lab

./: .editorconfig  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  claude.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  experiment_proposal.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
PLAN/: index.html
architecture/: index.html
concepts/exploration_vs_exploitation/: index.html
concepts/mdps/: index.html
concepts/on_vs_off_policy/: index.html
concepts/reward_design/: index.html
concepts/terminated_vs_truncated/: index.html
concepts/value_vs_policy_methods/: index.html
deploy/raspberrypi/: requirements-pi.txt  run_policy.py  servo_calibration.py
docs/: PLAN.md  architecture.md  experiments.md  index.md  reference.md  releasing.md  troubleshooting.md
docs/concepts/: exploration_vs_exploitation.md  mdps.md  on_vs_off_policy.md  reward_design.md  terminated_vs_truncated.md  value_vs_policy_methods.md
docs/experiments/: 01_bandit.md  02_world.md  03_qlearning.md  04_reward_shaping.md  05_dqn.md  06_generalisation.md  07_reinforce.md  08_ppo.md  09_ppo_continuous.md  10_sac_aim.md  11_robustify.md  12_deploy.md
docs/getting_started/: foxglove_setup.md  installation_macos.md  installation_ros2.md
docs/robot/: frames.md  kinematics.md  urdf.md  wiring.md
experiments/: 01_bandit.py  02_world.py  03_qlearning.py  04_reward_shaping.py  05_dqn.py  06_generalisation.py  07_reinforce.py  08_ppo.py  09_ppo_continuous.py  10_sac_aim.py  11_robustify.py  12_deploy.py  README.md  index.html
experiments/01_bandit/: index.html
experiments/02_world/: index.html
experiments/03_qlearning/: index.html
experiments/04_reward_shaping/: index.html
experiments/05_dqn/: index.html
experiments/06_generalisation/: index.html
experiments/07_reinforce/: index.html
experiments/08_ppo/: index.html
experiments/09_ppo_continuous/: index.html
experiments/10_sac_aim/: index.html
experiments/11_robustify/: index.html
experiments/12_deploy/: index.html
experiments/_template/: README.md  config.yaml  experiment.py
getting_started/foxglove_setup/: index.html
getting_started/installation_macos/: index.html
getting_started/installation_ros2/: index.html
notebooks/: 01_rl_concepts.ipynb  02_inspecting_the_env.ipynb  99_analysis_template.ipynb
reference/: index.html
releasing/: index.html
rl_lab/: __init__.py  cli.py  version.py
rl_lab/algos/: __init__.py  base.py  registry.py  sb3_integration.py
rl_lab/algos/policy_gradient/: __init__.py  ppo_min.py  reinforce.py
rl_lab/algos/tabular/: __init__.py  q_learning.py  sarsa.py
rl_lab/algos/value_based/: __init__.py  dqn.py
rl_lab/config/algo/: ddpg.yaml  dqn.yaml  ppo.yaml  ppo_min.yaml  qlearning.yaml  reinforce.yaml  sac.yaml  sarsa.yaml  td3.yaml
rl_lab/config/env/: easy.yaml  hard.yaml  medium.yaml
rl_lab/deploy/: __init__.py  policy_export.py
rl_lab/env/: __init__.py  buddy_jr_reach_env.py  presets.py  registration.py  rewards.py  spaces.py  wrappers.py
rl_lab/robot/: __init__.py  buddy_jr.py  kinematics.py  safety.py  servo_map.py
rl_lab/sim/: __init__.py  base.py  kinematic.py  loader.py  mujoco_sim.py  pybullet_sim.py
rl_lab/train/: __init__.py  callbacks.py  evaluate.py  logger.py  train.py
rl_lab/utils/: __init__.py  checkpoint.py  seeding.py
rl_lab/viz/: __init__.py  foxglove_bridge.py  live_metrics.py  schemas.py  urdf_publisher.py
rl_lab/viz/layouts/: buddy_jr.json
rl_lab/viz/rviz/: __init__.py  buddy_jr.rviz  ros2_publisher.py
robot/frames/: index.html
robot/kinematics/: index.html
robot/urdf/: index.html
robot/wiring/: index.html
scripts/: deploy_to_pi.py  jog_joints.py  launch_foxglove_bridge.py  validate_urdf.py
search/: search_index.json
tests/: test_algos_smoke.py  test_env_api.py  test_experiments_smoke.py  test_foxglove_bridge.py  test_foxglove_schemas.py  test_kinematics.py  test_mujoco_backend.py  test_presets.py  test_pybullet_backend.py  test_rewards.py  test_servo_map.py  test_spaces.py  test_urdf_loads.py
troubleshooting/: index.html
urdf/: README.md  buddy_jr.urdf
